# memex

./: .gitignore  AGENTS.md  MANIFEST.in  MEMORY.md  PROJECT_PLAN.md  README.md  SKILL.md  TEST_STRATEGY.md  pyproject.toml
.github/workflows/: release.yml
benchmarks/: README.md  memex_bench.py  memex_bench_turn_level.py  quick_test.py  run_100.sh  run_bench.sh  run_full_500.sh  run_full_bench.sh  run_turn_10.sh  run_turn_50.sh  run_turn_500.sh
claude-code-otel-guide/: README.md
docs/: comparison.md  longmemeval-benchmark-article.md
memex/: .gitignore  README.md  SKILL.md  __init__.py  _distill.py  _hybrid.py  _types.py  cli.py  pyproject.toml
memex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
memex/benchmarks/: RUN-2026-04-14.md  memex_longmemeval_bench.py  run_quick_test.sh
memex/plugins/claude-code-memex/: README.md  SKILL.md
memex/plugins/claude-code-memex/.claude-plugin/: plugin.json
memex/plugins/claude-code-memex/hooks/: hooks.json
memex/plugins/claude-code-memex/scripts/: memex-inject.js  memex-save.js
memex/skills/memory-skill/: SKILL.md
memex/src/memex/: _config.py  cli.py
memex/src/memex/store/: __init__.py  factory.py  lancedb.py  memory.py
memex/tests/: test_memex.py
memex_agent_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
memory/: 2026-04-14.md
memory-palace/: .gitignore  SPEC.md  pyproject.toml
memory-palace/docs/: CAPABILITY-REPORT.md  PHASE-0.md  PHASE-1.md
memory-palace/src/: __init__.py
memory-palace/src/core/: __init__.py  models.py  store.py
memory-palace/src/memory_stack/: __init__.py  layer.py
memory-palace/src/palace/: __init__.py  structure.py
memory-palace/src/search/: __init__.py  engine.py  vector_index.py
memory-palace/tests/: test_phase1.py
memory/mempalace-research/: 2026-04-09-调研报告.md  核心文件摘要.md
scripts/: release.sh
src/memex/: _consolidation.py  _contradiction.py  _decay.py  _embed.py  _hybrid.py  _revision.py
src/memex/store/: interface.py
tests/: test_consolidation.py  test_contradiction.py  test_decay.py  test_distill.py  test_hybrid.py  test_revision.py
