[project]
name = "memory-palace"
version = "0.1.0"
description = "AI 自我记忆系统 — Verbatim 存储 + 结构化召回"
requires-python = ">=3.10"
dependencies = [
    "sqlite-utils",
    "lancedb",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
